[package]
name = "gedcom"
version = "0.1.2"
authors = ["Robert Pirtle <astropirtle@gmail.com>"]
description = "A parser for GEDCOM files"
keywords = ["genealogy", "gedcom", "parser", "gedcom-parser", "family-trees"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/pirtleshell/rust-gedcom/"
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]

[lib]
name = "gedcom"
path = "src/lib.rs"

[[bin]]
name = "parse_gedcom"
path = "src/bin.rs"
