[package]
name = "gedcom"
version = "0.2.2"
authors = ["Robert Pirtle <astropirtle@gmail.com>"]
description = "A parser for GEDCOM files"
keywords = ["genealogy", "gedcom", "parser", "gedcom-parser", "family-trees"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/pirtleshell/rust-gedcom/"
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
default = []
json = ["serde", "serde_json"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0.123"

[lib]
name = "gedcom"
path = "src/lib.rs"

[[bin]]
name = "parse_gedcom"
path = "src/bin.rs"
