[package]
name = "gedcom_derive"
version = "0.1.0"
authors = ["Robert Pirtle <astropirtle@gmail.com>"]
description = "Custom derive macros for gedcom crate. "
license = "MIT"
readme = "readme.md"
repository = "https://github.com/pirtleshell/rust-gedcom/tree/mater/gedcom_derive"
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs"]


[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features =["extra-traits"]}
quote = "1.0"
